WeeklySchedule: Fixed the bug that did not change profile from 01 to 09 hours. AutoChangeMap: Fixed a bug